fix: scrolling with align-itens center

--- a/FRONTEND/src/pages/Dashboard/Places/style.scss
+++ b/FRONTEND/src/pages/Dashboard/Places/style.scss
@@ -2,7 +2,6 @@
 
 #places {
   display: flex;
-  align-items: center;
   justify-content: center;
   height: 100%;
   width: 100%;
@@ -12,6 +11,7 @@
   main {
     @extend %page-in;
     width: 100%;
+    margin: auto;
 
     section {
       @extend %card;
